# stringUnmatching

./: README.md  exp  experiments.cpp  multiple_functions.cpp  product-and-check.cpp  product.cpp  test.txt
Cpp/: DEBUG5grams_ACGT  block-enumeration.cpp  check-from-file.cpp  check-templates-from-file.cpp  check-templates-two.cpp  check-templates.cpp  create-and-run-different-Q-debug.cpp  create-and-run-different-Q.cpp  create-and-run-multiple-functions-debug.cpp  create-and-run-multiple-functions.cpp  diffq  gastro-template-generation.cpp  mult  multf  output.txt  prod  product-and-check-debug.cpp  random-check.cpp  template-generation.cpp
Cpp/check-debug/: debug_text.txt
ExpResults/: 100GenomesL20r6k3.txt  100GenomesL30r11k3.txt  Both1000GenomesL30r10.txt  Both100GenomesL30r10.txt  Both100GenomesL30r11.txt  Both100GenomesL30r12.txt  Both200GenomesL20r6.txt  Both200GenomesL30r10.txt  Both500GenomesL30r10.txt  Rand100GenomesL30r12.txt
ExpResults/2functions/: Both100GenomesL30r11.txt  Both10GenomesL25r8.txt  Both200GenomesL30r11.txt
ExpResults/2vs3OneTemplate/: 200GenomesL30r10k3.txt
ExpResults/2vs3functions/: 100GenomesL30r10k3.txt  100GenomesL30r10k3withFind.txt
ExpResults/3functions/: 100GenomesL30r12k3.txt  500GenomesL30r10k3.txt
ExplicitEnum/: enumTwoFctnShorterOutput.txt
GPU-matching/: .gitignore  CMakeLists.txt  README.md
GPU-matching/conda/: environment.yml
GPU-matching/include/: cuda_helper.cuh  edit.hpp  hamming.hpp  io.hpp  matcher.hpp  utils.cuh
GPU-matching/libs/catch2/: catch.hpp
GPU-matching/libs/cxxopts/: cxxopts.hpp
GPU-matching/src/: convert.cpp  edit.cpp  edit.cu  hamming.cpp  hamming.cu  io.cpp  matcher.cpp  matcher.cu  mindist.cpp
GPU-matching/test/: CMakeLists.txt  common.cpp  edit_test.cpp  hamming_test.cpp  io_test.cpp  length_test.cpp  matcher_test.cpp  reduction_test.cpp  stress_test.cpp
Implicit/: halfYL30r10.txt  halfYrandL20r6.txt  halfYrandL30r10.txt  shorterYL20r6.txt  shorterYL30r10.txt  smol.txt  smol2out.txt  testShort.txt
Implicit/OldOutput/: halfYRand.txt  newShorterY.txt  smolDist.txt
Old/: bruteShorterOutput.txt  outputHalf.txt  outputShorterMult.txt  small.txt  testshort.txt
Old Stuff/: experiments.cpp  input.txt  qgrams.txt  remoteExp.cpp
Old Stuff/ExpResults/2functions/: 1000GenomesL30r10.txt  Both100GenomesL20r6.txt  Both100GenomesL25r8.txt  Both500GenomesL30r11.txt
Old Stuff/ExpResults/2vs3functions/: 100GenomesL30r10k3.txt  OLD100GenomesL20r6k3.txt
Old Stuff/ExpResults/3functions/: 200GenomesL30r10k3.txt
Old Stuff/ExplicitEnum/: enumTwoFctnTestOutput.txt  mainEnum.cpp  shorterMapTest.txt
Old Stuff/Implicit/: halfYL20r6.txt  halfYL30r10MIXED.txt  halfYrandL30r10MIXED.txt  millionY.txt  shorterYrandL20r6.txt  shorterYrandL30r10.txt  smol2.txt
Old Stuff/Implicit/OldOutput/: millionL30.txt  smolOutput.txt
Old Stuff/Old/: ExpTab.docx  main.cpp  main.ilk  outputShorter.txt  outputsmall.txt  test.txt
Old/Cpp/: DEBUGall5grams_repetitions  block-enumeration.cpp  blocks  blood-template-generation.cpp  check-templates.cpp  checkt  create-and-run-multiple-functions-debug.cpp  create-and-run-multiple-functions.cpp  debuginput.txt  diffq  logDiffQ.txt  multdeb  multiple-functions-debug.cpp  multiple-functions.cpp  product-and-check.cpp  random-check.cpp
Old/Cpp/check-debug/: binary_debug_text  check-templates-debug.cpp  debug
Old/Old Stuff/: exp  preprocess.cpp  rem  test.txt
Old/Old Stuff/ExpResults/2functions/: Both100GenomesL20r7.txt  Both100GenomesL30r10.txt
Old/Old Stuff/ExpResults/2vs3OneTemplate/: 100GenomesL20r6k3.txt  100GenomesL20r7k3.txt  100GenomesL30r10k3.txt  200GenomesL20r5k3.txt  200GenomesL20r6k3.txt
Old/Old Stuff/ExpResults/2vs3functions/: OLD100GenomesL30r10k3.txt
Old/Old Stuff/ExpResults/3functions/: 100GenomesL20r6k3.txt
Old/Old Stuff/Implicit/: mainImplicit.cpp
Old/Old Stuff/Old/: OLDoutputShorterMult.txt  correctShorterOutput.txt
Old/Q-grams/: build_Parikh_classes.cpp  class_partitions_6545.h  compl  count-genomes.cpp  create-masked-complements-fasta.cpp  create-two-random-masked-complements.cpp  distinct-Qgrams-gen.cpp  mapfile.hpp  q-gram-gen.py
Old/TestResults/: FirstMultipleTest.txt  More-results-dist-ge9.txt  Results-dist-ge9.txt
Q-grams/: build_Parikh_classes.cpp  create-masked-complements.cpp  create-masked-complements_debug.cpp  create-masked-complements_txt_debug.cpp  create-two-random-masked-complements.cpp  fasta-to-ATCG.cpp  fasta-to-packed-ATCG.cpp  packed-ATCG-to-text.cpp  preprocess-different-Q.cpp  prod  q-grams-gen.cpp
Templ-gen/: Blood-prefix.fsa  check-templates-from-file.cpp  template-generation.cpp
Template-generation/: check-templates-from-file.cpp  template-generation.cpp
TestResults/: FirstMultipleTest.txt  Results-dist-ge9.txt
